# serial_logger

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  serial_logger
logs/: logs.txt
src/: main.cpp  serial_utils.hpp
